--- a/index.html
+++ b/index.html
@@ -1,74 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda Online</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Enlace al archivo externo -->
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Asistente de Voz GPT</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Tienda Online</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#productos">Productos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#api">API</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <!-- Header Section -->
-    <header class="text-center">
-        <div class="container">
-            <h1>Bienvenido a Nuestra Tienda Online</h1>
-            <p>Encuentra los mejores productos al mejor precio</p>
-        </div>
-    </header>
-
-    <!-- Productos Section -->
-    <section id="productos" class="container my-5">
-        <h2 class="text-center mb-4">Nuestros Productos</h2>
-        <div id="lista-productos" class="row">
-            <!-- Productos cargados dinámicamente -->
-            <p class="text-center">Cargando productos...</p>
-        </div>
-    </section>
-
-    <!-- API Section -->
-    <section id="api" class="container my-5">
-        <h2 class="text-center mb-4">Integración con API</h2>
-        <p class="text-center">Aquí puedes integrar contenido dinámico usando JavaScript y APIs externas.</p>
-        <div id="api-content" class="text-center">
-            <button class="btn btn-secondary" onclick="cargarDatos()">Cargar Datos de API</button>
-            <div id="datos" class="mt-3"></div>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="text-center bg-dark text-white py-3">
-        <p>&copy; 2024 Tienda Online. Todos los derechos reservados.</p>
-    </footer>
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Enlace al archivo JS -->
-    <script src="script.js"></script>
+  <div class="container">
+    <h1>🎙️ Asistente de Voz GPT</h1>
+    <button id="hablarBtn">Hablar</button>
+    <p id="textoUsuario"></p>
+    <p id="respuestaGPT"></p>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
+
 
