--- a/index.html
+++ b/index.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Asistente Emilia</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="container">
     <h1 class="mb-4">👋 ¡Bienvenido a tu asistente!</h1>
     <h2 class="mb-5">Soy <strong>Emilia</strong>, tu asistente virtual 😊</h2>
-
     <div id="status" class="mb-4 text-secondary">Esperando permiso para acceder al micrófono...</div>
-
     <button id="startRecord" class="btn btn-primary btn-custom" disabled>🎙️ Grabar</button>
     <button id="sendAudio" class="btn btn-success btn-custom" disabled>📤 Enviar</button>
+    <p id="respuesta" class="mt-4 fw-bold"></p>
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
